--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-onboarding": "^9.0.8",
     "@storybook/addon-vitest": "^9.0.8",
     "@storybook/react-vite": "^9.0.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
